--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'util.android.textviews:textviews:1.1.1@aar'
+    compile project (':library')
 }
