--- a/sample2/build.gradle
+++ b/sample2/build.gradle
@@ -38,7 +38,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project (':library')
+    compile project (':textviews')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'javax.annotation:javax.annotation-api:1.2'
