--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -23,5 +23,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'util.android:library:1.6.8@aar'
+    compile 'com.facebook.network.connectionclass:connectionclass:1.0.1'
+    compile 'com.facebook.device.yearclass:yearclass:1.0.1'
     compile project (':library')
 }
