--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.example.textviewsample"
@@ -22,7 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project (':library')
-    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:design:25.3.0'
     compile 'util.android:library:1.6.8@aar'
     compile 'com.facebook.network.connectionclass:connectionclass:1.0.1'
     compile 'com.facebook.device.yearclass:yearclass:1.0.1'
