--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
@@ -19,5 +20,6 @@ allprojects {
         maven {
             url  "http://dl.bintray.com/indieboyjeff/maven"
         }
+        google()
     }
 }
