--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.example.textviewsample"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -20,10 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project (':library')
-    compile 'com.android.support:design:25.3.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':library')
+    compile 'com.android.support:design:26.1.0'
     compile 'util.android:library:1.6.8@aar'
     compile 'com.facebook.network.connectionclass:connectionclass:1.0.1'
-    compile 'com.facebook.device.yearclass:yearclass:1.0.1'
+    compile 'com.facebook.device.yearclass:yearclass:2.0.0'
 }
