--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.example.textviewsample"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -20,10 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':library')
-    compile 'com.android.support:design:26.1.0'
-    compile 'util.android:library:1.6.8@aar'
-    compile 'com.facebook.network.connectionclass:connectionclass:1.0.1'
-    compile 'com.facebook.device.yearclass:yearclass:2.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':library')
+    implementation 'com.android.support:design:27.0.2'
+    implementation 'util.android:library:1.6.8@aar'
+    implementation 'com.facebook.network.connectionclass:connectionclass:1.0.1'
+    implementation 'com.facebook.device.yearclass:yearclass:2.0.0'
+    implementation 'com.android.support:support-emoji:27.0.2'
+    implementation 'com.android.support:support-emoji-bundled:27.0.2'
 }
